--- a/src/TraderVoyagesUI/src/App.css
+++ b/src/TraderVoyagesUI/src/App.css
@@ -1,3 +1,86 @@
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
+
+.logo {
+  left: 50%;
+  top: 20%;
+  transform: translate(-50%, -50%);
+  opacity: 0.4;
+  width: 250px;
+}
+
+.input-style {
+  padding: 0.5rem 1rem;
+  border: 1px solid #ccc;
+  border-radius: 0.375rem;
+  box-shadow: 0 2px 4px rgba(182, 37, 12, 0.1);
+  color: black;
+}
+
+.button-style {
+  margin-top: 1rem;
+  padding: 0.5rem 1.5rem;
+  background-color: #ef704f;
+  color: white;
+  border-radius: 0.375rem;
+  border: none;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.button-style:hover {
+  background-color: darken(#ef704f, 10%);
+  background-color: #faa792;
+}
+
+.dropdown-button {
+  border: 4px solid transparent;
+}
+
+.dropdown-button:hover,
+.dropdown-button:active {
+  border: 4px solid #faa792 !important;
+}
+
+.dropdown-button:focus {
+  border: 4px solid #faa792 !important;
+}
+
+.border-dark-edge-left {
+  position: absolute;
+  background-color: #ef704f;
+  width: 5px;
+  height: 100%;
+  bottom: 0%;
+  left: 0;
+}
+
+.border-dark-edge-right {
+  position: absolute;
+  background-color: #ef704f;
+  width: 5px;
+  height: 100%;
+  bottom: 0%;
+  right: 0;
+}
+
+/* animation */
+@keyframes mergeAndFade {
+  0% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+  50% {
+    opacity: 0.5;
+    transform: translateX(calc(-50vw + 50%));
+  }
+  100% {
+    opacity: 0;
+    transform: translateX(calc(-50vw + 50%));
+  }
+}
+
+.mergeAndFade {
+  animation: mergeAndFade 3s forwards;
+}
