--- a/src/TraderVoyagesUI/src/App.css
+++ b/src/TraderVoyagesUI/src/App.css
@@ -65,6 +65,17 @@
   right: 0;
 }
 
+@keyframes zoomAndFocus {
+  0% {
+    opacity: 0;
+    font-size: 10px;
+  }
+  
+  100% {
+    opacity: 1;
+    font-size: 40px;
+  }
+}
 /* animation */
 @keyframes mergeAndFade {
   0% {
@@ -97,7 +108,9 @@
     transform: translateX(-50%);
   }
 }
-
+.zoomAndFocus {
+  animation: zoomAndFocus 2s ease-out forwards;
+}
 .mergeAndFade {
   animation: mergeAndFade 1.2s ease-out forwards;
 }
